Fixes top bar styling on Safari.

--- a/client/stylesheets/top_bar.css
+++ b/client/stylesheets/top_bar.css
@@ -13,6 +13,7 @@
 
 #navbar-user {
   font-weight: bold;
+  margin-right: 1%;
 }
 
 #search-box {
